--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -6,19 +6,10 @@
   <% end %>
   <div class="info">
     <h2 style="margin-bottom: 5px;">
-      <% @name =
-        if (@user.first_name != "" && @user.first_name !=nil)
-          @user.first_name
-        end
-        if (@user.last_name != "" && @user.last_name!= nil)
-          @name = @name + " " + @user.last_name
-        end %>
-      <%= link_to(@name, @user) %>
+      <%= link_to(@user.full_name, @user) %>
     </h2>
     <% if @user.editor? %>
-      <span class="editor_status">
-        Editor
-      </span>
+      <span class="editor_status">Editor</span>
     <% end %>
     <% if (@user.description != "" && @user.description != nil) %>
       <p class="description_user" style="margin-top: 5px;"><%= @user.description %></p>
