--- a/app/views/users/_profile_nolink.html.erb
+++ b/app/views/users/_profile_nolink.html.erb
@@ -5,25 +5,17 @@
     <%= image_tag("profile_image", :class => "profile_img") %>
   <% end %>
   <div class="info">
-  <h2 style="margin-bottom: 5px;">
-    <% @name =
-      if (@user.first_name != "" && @user.first_name !=nil)
-        @user.first_name
-      end
-      if (@user.last_name != "" && @user.last_name!= nil)
-        @name = @name + " " + @user.last_name
-      end %>
-    <%= @name %>
-  </h2>
-  <% if @user.editor? %>
-    <span class="editor_status">
-      Editor
-    </span>
-  <% end %>
-  <% if (@user.description != "" && @user.description != nil) %>
-    <p class="description_user" style="margin-top: 5px;"><%= @user.description %></p>
-  <% end %>
-
+    <h2 style="margin-bottom: 5px;">
+      <%= @user.full_name %>
+    </h2>
+    <% if @user.editor? %>
+      <span class="editor_status">
+        Editor
+      </span>
+    <% end %>
+    <% if (@user.description != "" && @user.description != nil) %>
+      <p class="description_user" style="margin-top: 5px;"><%= @user.description %></p>
+    <% end %>
     <div class="website">
       <% if (@user.website != "" && @user.website !=  nil) %>
          <p class="website_link"><span>Website: </span><a href="<%= @user.website %>" target="_blank"><%= @user.website %></a></p>
