improved code/images

--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -168,6 +168,7 @@ h5, h3 {
 .onboarding_page_container {
   margin: 30px auto;
   max-width: 800px;
+  margin-bottom: 85px;
   #onboarding_page {
     padding: 30px;
     background-color: WhiteSmoke;
