--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -88,7 +88,7 @@
             <i class="fa fa-bars toggle_menu" style="color: black;"></i>
           </div>
           <div class="banner_item" style="text-align: center;">
-            <a href="/"><%= image_tag "teenmag.webp", id: "name" %></a>
+            <a href="/"><%= image_tag "teenmag.png", id: "name" %></a>
           </div>
           <div class="banner_item" style="text-align: right;">
             <div class="social-media">
