--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -20,7 +20,6 @@
   <p>
     - <b>Introductory Paragraph:</b> The first few sentences are the most important for SEO (Search Engin Optimization) and therefore should be descriptive and include words that describe what the article is going to be about. <i>Do not start your article with something like "Hey!" or "Hi everyone!" or reference your last article.</i>
   </p>
-  <img class="image" src="http://i.imgur.com/212OZEZ.png" />
   <p>
     - <b>Headers:</b> Your Article needs to be split up with descriptive headers. To make it easier to include headers, make your title something like: 7 steps to having healthy hair or 10 best places in the world to travel for your senior trip.
   </p>
@@ -34,7 +33,7 @@
   <%= image_tag("3.png", :class=>"image")%>
 
   <h1>Formatting Your Articles</h1>
-  <img src="http://i.imgur.com/ZuIxgIW.jpg" />
+  <%= image_tag "texteditor.jpg" %>
   <ol>
     <li><p style="color: #ff00aa; display: inline;">Source:</p> Changes the text to the source code (HTML and CSS). Use this button when embedding youtube videos or instagram/twitter widgets. See instructions for doing this.</li>
     <li><p style="color: #00a9ff; display: inline;">Format:</p> This button for changing the size of headers. Use Heading 1 for the main topics in your article and the others for subheaders.</li>
@@ -45,9 +44,9 @@
 
   <h3>Links</h3>
   <p style="margin-bottom: 10px;">To add a link, first highlight the text you want to add the link to, then click on the infinity symbol (purple box). Next, enter the link in the URL box.</p>
-  <img class="image" src="http://i.imgur.com/RtX7Zf1.png"/>
+  <%= image_tag "link.png", class: "image" %>
   <p style="margin-top: 20px; margin-bottom:10px;">IMPORTANT: For all links, you must change the target setting to "New Window (_blank)".</p>
-  <img class="image" src="http://i.imgur.com/UGb2fG9.png"  />
+  <%= image_tag "link_target.png", class: "image" %>
 
   <div class="writing--images">
     <h3>Images</h3>
@@ -68,40 +67,38 @@
     <p>Select embed and copy the code.</p>
     <%= image_tag("8.png", :class=>"image")%>
     <p>Paste the copied code into your article (remember, "Source" needs to be activated before doing this).</p>
-    <img class="image" src="http://i.imgur.com/ruOcdsM.png" />
+    <%= image_tag("source_article.png", :class=>"image")%>
     <p style="margin-top: 30px; background-color: yellow; display: inline-block; padding: 5px;">You can do the same thing with Twitter widgets and Youtube videos.</p>
     <h4 style="margin-top: 10px;">Twitter:</h4>
     <p>
       For Twitter, click on a tweet to open it, and then click on the downwards arrow in the top right. Finally click on "Embed" to copy the code.
     </p>
-    <img class="image" src="http://i.imgur.com/hMmXaPf.png" />
+    <%= image_tag("twitter.png", :class=>"image")%>
     <h4>Youtube:</h4>
-    <p>
-      For Youtube, go to Share, then Embed.
-    </p>
-    <img class="image" src="http://i.imgur.com/kAlhUpl.png" />
+    <p>For Youtube, go to Share, then Embed.</p>
+    <%= image_tag("youtube.png", :class=>"image")%>
 
     <h3>Uploading Images</h3>
     <p>
       To upload your own image, click on the image symbol boxed in green. Click on the "Upload" tab.
     </p>
-    <img class="image" src="http://i.imgur.com/49VWtZP.png"/>
+    <%= image_tag "uploadimage1", class: "image" %>
     <p>
       Then click on "Choose File" and choose an image from your computer.
     </p>
-    <img class="image" src="http://i.imgur.com/B9ZmhQQ.png" />
+    <%= image_tag "uploadimage2", class: "image" %>
     <p>
       <b>IMPORTANT!</b> You need to click on "Send it to the Server" before clicking "OK". This can take up to 10 seconds. It should automatically reroute you to "Image Info". The larger the image, the more time it takes.
     </p>
     <p>
       <b>"Image source URL is missing"</b>: If you get this error, it means that you did not click on "Send it to the Server", or your image is too large to be uploaded.
     </p>
-    <img class="image" src="http://i.imgur.com/U55FGsI.png" />
+    <%= image_tag "uploadimage3", class: "image" %>
   </div>
 
   <hr />
   <p>
-    If you're confused about any of this styling, or want to do something specific, you can email Marcela at <b>marcela@theteenmagazine.com</b>
+    If you're confused about any of this styling, or want to do something specific, you can email Sewon at <b>sewonpark@college.harvard.edu</b>
   </p>
 
   <p>Read "<a href="/finding-images">Finding Images</a>" Next →</p>
