--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -54,7 +54,7 @@
     /></noscript>
     <!-- End Facebook Pixel Code -->
   </head>
-  <body>
+  <body onload="toggle_menu()">
     <amp-auto-ads type="adsense"
         data-ad-client="ca-pub-4986861624955300">
     </amp-auto-ads>
@@ -142,5 +142,27 @@
         </nav>
       </div>
     </footer>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-89987071-1', 'auto');
+      ga('send', 'pageview');
+        $(document).ready(function() {
+          $(".fa-times").click(function() {
+            $(".sidebar_menu").addClass("hide_menu");
+            $(".bodywrapper").removeClass("push");
+            $(".bodywrapper").addClass("pushback");
+          });
+
+          $(".toggle_menu").click(function() {
+            $(".sidebar_menu").removeClass("hide_menu");
+            $(".bodywrapper").addClass("push");
+            $(".bodywrapper").removeClass("pushback");
+          });
+        });
+    </script>
   </body>
 </html>
