--- a/scss/post_project.scss
+++ b/scss/post_project.scss
@@ -13,9 +13,9 @@
       a {
         font-weight: bold;
         text-decoration: none;
-        color: $dark;
+        color: #424653;
         &:hover {
-          color: $highlight;
+          color: #65B19D;
         }
       }
     }
@@ -32,7 +32,7 @@
     text-align: center;
     .date {
       font-size: .9em;
-      color: $light;
+      color: #9a9da4;
       margin: 0;
     }
     h1 {
@@ -51,14 +51,14 @@
     margin: 0;
     font-weight: 700;
     text-transform: uppercase;
-    color: $dark;
+    color: #424653;
     font-size: .8em;
   }
   i {
-    color: $dark;
+    color: #424653;
     padding: 1em 1.5em;
     &:hover {
-      color: $highlight;
+      color: #65B19D;
       cursor: pointer;
     }
   }
@@ -85,25 +85,25 @@
     border-radius: .15em;
     line-height: 20px;
     text-decoration: none;
-    background: $white;
+    background: #FFFFFF;
     font-weight: bold;
     font-size: .7em;
     font-style: normal;
-    color: $dark;
+    color: #424653;
     &:hover {
-      background: $highlight;
-      color: $white;
+      background: #65B19D;
+      color: #FFFFFF;
     }
   }
   .current {
-    background: $highlight;
-    color: $white;
+    background: #65B19D;
+    color: #FFFFFF;
   }
   .disabled {
     color: #C0C0C0;
     &:hover {
       color: #C0C0C0;
-      background: $white;
+      background: #FFFFFF;
     }
   }
 }
