--- a/app/assets/stylesheets/_category.css.scss
+++ b/app/assets/stylesheets/_category.css.scss
@@ -22,7 +22,7 @@
       text-shadow: 1px 1px #191919;
       padding: 30px;
       margin: 0;
-      color: $highlight;
+      color: #65B19D;
       font-family: 'Vollkorn', serif;
       font-size: 40px;
     }
