--- a/app/assets/stylesheets/_pages.css.scss
+++ b/app/assets/stylesheets/_pages.css.scss
@@ -14,7 +14,7 @@
   .question {
     margin: 0;
     font-weight: 800;
-    color: $highlight;
+    color: #65B19D;
     font-size: 25px;
   }
   a {
@@ -34,7 +34,7 @@
     p {
       margin: 0;
       width: 33%;
-      color: $highlight;
+      color: #65B19D;
       display: inline-block;
     }
   }
@@ -83,7 +83,7 @@
     padding: 5px;
   }
   b {
-    color: $highlight;
+    color: #65B19D;
   }
   img {
     width: 100%;
