--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -36,7 +36,7 @@
 .box {
   position:relative;
   vertical-align: middle;
-  color: $highlight;
+  color: #65B19D;
   display: inline-block;
   height: 60px;
   line-height: 60px;
@@ -61,7 +61,7 @@
 }
 
 .box:hover {
-  color: $highlight;
+  color: #65B19D;
 }
 
 .box::before, .box::after {
@@ -78,32 +78,32 @@
 }
 
 .foo::before {
-  border-bottom: 6px solid $highlight;
-  border-left: 6px solid $highlight;
+  border-bottom: 6px solid #65B19D;
+  border-left: 6px solid #65B19D;
   -webkit-transform-origin: 0 100%;
 }
 
 .foo::after {
-  border-top: 6px solid $highlight;
-  border-right: 6px solid $highlight;
+  border-top: 6px solid #65B19D;
+  border-right: 6px solid #65B19D;
   -webkit-transform-origin: 100% 0%;
 }
 
 
 .bar::before {
-  border-bottom: 6px solid $highlight;
-  border-left: 6px solid $highlight;
+  border-bottom: 6px solid #65B19D;
+  border-left: 6px solid #65B19D;
   -webkit-transform-origin: 100% 0%;
 }
 
 .bar::after {
-  border-top: 6px solid $highlight;
-  border-right: 6px solid $highlight;
+  border-top: 6px solid #65B19D;
+  border-right: 6px solid #65B19D;
   -webkit-transform-origin: 0% 100%;
 }
 
 .curmudgeon::before {
-  border-bottom: 6px solid $highlight;
+  border-bottom: 6px solid #65B19D;
   border-left: 0;
   -webkit-transform-origin: 0% 100%;
 }
@@ -242,7 +242,7 @@
       margin: 0;
       font-size: 30px;
       text-decoration: none;
-      color: $highlight;
+      color: #65B19D;
       font-family: 'Vollkorn', serif;
     }
 
@@ -256,7 +256,7 @@
         display: inline-block;
       }
       a, p {
-        color: $highlight;
+        color: #65B19D;
         margin: 0 !important;
         span {
           color: black;
@@ -478,7 +478,7 @@
     }
   }
   h3 {
-    color: $highlight;
+    color: #65B19D;
   }
   .flex--profile {
     display: flex;
