--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -129,7 +129,7 @@ $gray:  #2a2a2a;
       font-family: 'Roboto Condensed', sans-serif;
       font-size: 30px;
       a {
-        color: $highlight;
+        color: #65B19D;
         text-decoration: none;
       }
     }
@@ -207,7 +207,7 @@ $gray:  #2a2a2a;
       margin-left: auto;
       margin-right: auto;
       a {
-        color: $highlight;
+        color: #65B19D;
         text-decoration: none;
         &:hover {
           opacity: .55;
