--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -216,7 +216,7 @@ h5, h3 {
       margin-bottom: 5px;
       p {
         font-weight: bold;
-        color: $highlight;
+        color: #65B19D;
       }
     }
   }
