--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -66,6 +66,7 @@
             <a href="/users/<%= @user.slug %>/edit">Edit Profile</a>
             <%= link_to("Change Password", edit_user_registration_path) %>
             <%= link_to("Review Onboarding", onboarding_path(:page => "welcome")) %>
+            <%= link_to("Pitches", pitches_path) %>
           </div>
         </div>
         <br />
