--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,7 +38,7 @@
     <div class="flex--welcome">
       <div class="flex-1">
         <div class="ctgry_section">
-          <% publishedPosts.where(meta_title: "Lifestyle").all.order("created_at desc")[0..3].each do |post| %>
+          <% publishedPosts.where(:category_id => Category.friendly.find("lifestyle").id).all.order("created_at desc")[0..3].each do |post| %>
             <% featuredPostIds << post.id %>
             <div class="ctgry_article" style="width: 23%;">
               <%=link_to(image_tag(post.thumbnail.url(:large2), alt: post.title), post )%>
@@ -54,7 +54,7 @@
   <div class="flex--welcome">
     <div class="flex-1">
       <div class="ctgry_section">
-        <% publishedPosts.where(meta_title: "Academics").all.order("created_at desc")[0..2].each do |post| %>
+        <% publishedPosts.where(:category_id => Category.friendly.find("academics").id).all.order("created_at desc")[0..2].each do |post| %>
           <% featuredPostIds << post.id %>
           <div class="ctgry_article">
             <%=link_to(image_tag(post.thumbnail.url(:large2), alt: post.title), post )%>
@@ -66,7 +66,7 @@
       </div>
       <h1 class="section--title"><a href="/categories/get-involved">Entertainment</a></h1>
       <div class="ctgry_section">
-        <% publishedPosts.where(meta_title: "Entertainment").all.order("created_at desc")[0..2].each do |post| %>
+        <% publishedPosts.where(:category_id => Category.friendly.find("entertainment").id).all.order("created_at desc")[0..2].each do |post| %>
           <% featuredPostIds << post.id %>
           <div class="ctgry_article">
             <%=link_to(image_tag(post.thumbnail.url(:large2), alt: post.title), post )%>
@@ -79,7 +79,7 @@
       <div class="ctgry_grid_wrapper">
         <a class="applies" href="/apply"><img src="https://s3.amazonaws.com/theteenmagazine/3M0jhbo.jpg" /></a>
         <div class="ctgry_grid">
-          <% publishedPosts.where(meta_title: "Entertainment").all.order("created_at desc")[3..4].each do |post| %>
+          <% publishedPosts.where(:category_id => Category.friendly.find("entertainment").id).all.order("created_at desc")[3..4].each do |post| %>
             <% featuredPostIds << post.id %>
             <div class="ctgry_grid_article">
               <%=link_to(image_tag(post.thumbnail.url(:medium), alt: post.title), post )%>
