--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -1,4 +1,4 @@
-<h1 id="page_title">Claim Article idea</h1>
+<h1 id="page_title">Claim Article Pitch</h1>
 <div class="skinny_wrapper wrapper_padding">
   <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started.
     You will have <b>two weeks</b> to submit your article for review. If your article is not submitted within two weeks and/or not approved within one month of
