--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,7 @@
         <%= link_to "Users", users_path %>
       <% end %>
       <% if user_signed_in? %>
+         <%= link_to "Pitches", pitches_path %>
          <%= link_to "Dashboard", user_path(current_user) %>
          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
      <% else %>
@@ -93,6 +94,7 @@
             <a class="link" href="/categories/entertainment">Entertainment</a>
             <a class="link" href="/categories/fashion">Fashion</a>
             <% if user_signed_in? %>
+              <%= link_to "Pitches", pitches_path, class: "link" %>
               <%= link_to "Dashboard", user_path(current_user), class: "link" %>
             <% else %>
                 <a class="link" href="/contacts/new">Contact</a>
