--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -73,6 +73,7 @@
         <%= link_to "Users", users_path %>
       <% end %>
       <% if user_signed_in? %>
+         <%= link_to "Pitches", pitches_path %>
          <%= link_to "Dashboard", user_path(current_user) %>
          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
      <% else %>
@@ -112,6 +113,7 @@
               <%= link_to "Users", users_path, class: "link" %>
             <% end %>
             <% if user_signed_in? %>
+              <%= link_to "Pitches", pitches_path, class: "link" %>
               <%= link_to "Dashboard", user_path(current_user), class: "link" %>
               <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "link" %>
             <% else %>
