--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -31,6 +31,7 @@
         <%= link_to "Users", users_path %>
       <% end %>
       <% if user_signed_in? %>
+         <%= link_to "Pitches", pitches_path %>
          <%= link_to "Dashboard", user_path(current_user) %>
          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
      <% else %>
@@ -65,6 +66,7 @@
                 <%= link_to "Users", users_path, class: "link" %>
               <% end %>
               <% if user_signed_in? %>
+                <%= link_to "Pitches", pitches_path, class: "link" %>
                 <%= link_to "Dashboard", user_path(current_user), class: "link" %>
                 <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "link" %>
               <% else %>
@@ -96,5 +98,26 @@
         </nav>
       </div>
     </footer>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-89987071-1', 'auto');
+      ga('send', 'pageview');
+        $(document).ready(function() {
+          $(".fa-times").click(function() {
+            $(".sidebar_menu").addClass("hide_menu");
+            $(".bodywrapper").removeClass("push");
+            $(".bodywrapper").addClass("pushback");
+          });
+
+          $(".toggle_menu").click(function() {
+            $(".sidebar_menu").removeClass("hide_menu");
+            $(".bodywrapper").addClass("push");
+            $(".bodywrapper").removeClass("pushback");
+          });
+        });
+    </script>
   </body>
 </html>
