--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -30,11 +30,12 @@
           <ol>
             <li>Introduce yourself to the <a target="_blank" href="https://www.facebook.com/groups/615063885673363/">Facebook group</a></li>
             <li>Read through the resources found at the bottom of your dashboard</li>
-            <li>Pick a topic to write about from the <a target="_blank" href="https://docs.google.com/spreadsheets/d/1I-za5WKWPTQWiC2sAGBHZbjsOjb74EUZgvCAfQ4dU9I/edit?fbclid=IwAR2FYXYop0qny_8h6EqejNLLOEcnPai2q-X-L5ik3REak8SizW6-K18jyY4#gid=0">Google Sheets</a> or choose your own. If you are unsure what to write about, you can always ask for advice/ideas from other writers in the Facebook group. </li>
-            <li><a href="/posts/new">Write your first article</a> and submit it for review. Our amazing editors will look it over and give you
+            <li>Claim a pitch from the <%= link_to("pitches page", pitches_path) %> to start your first article.</li>
+            <li>Once you've finished your first article, you can submit it for review though the article form. Our amazing editors will look it over and give you
             feedback.</li>
           </ol>
-          <p>When you've completed steps 1 - 3, you can start writing your first article. </p>
+          <p>If you have your own article idea that fits our audience, you can <%= link_to("start a new article", new_post_path) %>. Please not that your article may not be approved if the content is not unique enough or relevant to our teenage audience. </p>
+          <p>If you are looking for some additional inspiration, visit the <a target="_blank" href="https://docs.google.com/spreadsheets/d/1I-za5WKWPTQWiC2sAGBHZbjsOjb74EUZgvCAfQ4dU9I/edit?usp=sharing">Community Group Brainstorm</a> or the <a target="_blank" href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>.</p>
           <% if @user_posts.count == 0 %>
             <h1 id="page_title">Your saved/submitted articles will show up here</h1>
           <% else %>
@@ -66,7 +67,7 @@
             <a href="/users/<%= @user.slug %>/edit">Edit Profile</a>
             <%= link_to("Change Password", edit_user_registration_path) %>
             <%= link_to("Review Onboarding", onboarding_path(:page => "welcome")) %>
-            <%= link_to("Pitches", pitches_path) %>
+            <%= link_to("Editor Pitches", pitches_path) %>
           </div>
         </div>
         <br />
